--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   ],
   "author": "",
   "license": "MIT",
+  "appId": "com.easybot.chat",
   "devDependencies": {
     "electron": "^28.0.0",
     "electron-reload": "^2.0.0-alpha.1"
