updated build config to make build in windows

--- a/package.json
+++ b/package.json
@@ -40,11 +40,20 @@
     },
     "win": {
       "target": [
-        "nsis",
-        "portable"
+        {
+          "target": "nsis",
+          "arch": ["x64"]
+        },
+        {
+          "target": "portable",
+          "arch": ["x64"]
+        }
       ],
       "icon": "EasyBotLogo.png",
-      "artifactName": "${productName}-${version}.${ext}"
+      "artifactName": "${productName}-${version}.${ext}",
+      "signingHashAlgorithms": [],
+      "signAndEditExecutable": false,
+      "signDlls": false
     },
     "linux": {
       "target": [
