--- a/package.json
+++ b/package.json
@@ -72,6 +72,9 @@
       "allowToChangeInstallationDirectory": true
     }
   },
+  "dependencies": {
+    "dotenv": "^16.3.1"
+  },
   "devDependencies": {
     "electron": "^28.0.0",
     "electron-builder": "^24.6.4",
