Add code signing support with SSL.com eSigner integration
- Created .env.signing.example for SSL.com credentials setup
- Updated .gitignore to exclude sensitive signing files
- Enhanced package.json with new build and sign scripts
- Added sign-windows.bat and sign-windows.ps1 scripts for signing executables

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,10 @@ build/
 .env
 .env.local
 .env.*.local
+.env.signing
 
+# Code signing credentials (NEVER commit these!)
+*.pfx
+*.p12
+signing-credentials.json
+certificates
