Changed app's name from easy-bot-chat to EasyBotChat

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "easy-bot-chat",
+  "name": "EasyBotChat",
   "version": "1.0.0",
   "description": "Secure application for accessing EasyBotChat",
   "main": "main.js",
