Add appx configuration to package.json for Windows app deployment
- Added target configuration for appx with x64 architecture.
- Included appx-specific metadata such as applicationId, identityName, publisher, and displayName.
- Specified languages and makeappxArgs for the appx build process.

--- a/package.json
+++ b/package.json
@@ -54,6 +54,10 @@
           "arch": [
             "x64"
           ]
+        },
+        {
+          "target": "appx",
+          "arch": ["x64"]
         }
       ],
       "icon": "EasyBotLogo.png",
@@ -69,6 +73,15 @@
       ],
       "icon": "EasyBotLogo.png",
       "artifactName": "${productName}-${version}.${ext}"
+    },
+    "appx": {
+      "applicationId": "EasyBotChat",
+      "identityName": "EasybotchatInc.EasyBotChat",
+      "publisher": "CN=EASYBOTCHAT INC., O=EASYBOTCHAT INC., L=Dallas, S=Texas, C=US",
+      "publisherDisplayName": "EASYBOTCHAT INC.",
+      "displayName": "EasyBotChat",
+      "languages": ["en-US"],
+      "makeappxArgs": []
     },
     "nsis": {
       "oneClick": false,
